--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,6 @@
-{ "java.project.sourcePaths": [ "/home/kas/javafx-sdk-23.0.1/lib" ] }
+{
+    "java.project.sourcePaths": [
+        "/home/kas/javafx-sdk-23.0.1/lib",
+        "C:\\javafx\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1"
+    ]
+}
